--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
 	width: 100dvw;
 	margin: 0 auto;
 	display: flex;
+            flex-direction: column;
+            align-items: center;
 	justify-content: center;
 	align-items: center;
 }
@@ -10,4 +12,5 @@ body {
 img {
 	max-width: 100%;
 	height: auto;
+    padding:20px;
 }
