--- a/style.css
+++ b/style.css
@@ -1,16 +1,62 @@
 body {
-	height: 100dvh;
-	width: 100dvw;
-	margin: 0 auto;
-	display: flex;
+ background-color: black;
+            color: white;
+            margin: 0;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            display: flex;
             flex-direction: column;
             align-items: center;
-	justify-content: center;
-	align-items: center;
+            justify-content: center;
+            height: 100vh;
 }
-
-img {
+.navbar {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background-color: #222;
+	height: 50px;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+.navbar a {
+	color: white;
+	text-decoration: none;
+	padding: 10px 20px;
+	transition: 0.3s;
+}
+.navbar a:hover {
+	background-color: white;
+	color: black;
+}
+.content {
+	margin-top: 60px;
+	padding: 20px;
+	text-align: center;
+}
+.led-light-font {
+	display:flex;
+	align-items: center;
+	justify-content: center;
 	max-width: 100%;
 	height: auto;
     padding:20px;
+}
+/*.projects{
+	display:center;
+	width: auto;
+	height: auto;
+}
+*/
+
+footer{
+   position:relative;
+   margin: 3px;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color:whitesmoke;
+   text-align: center;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
