--- a/style.css
+++ b/style.css
@@ -60,3 +60,7 @@ footer{
    text-align: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.projectLink{
+	color: white;
+}
