--- a/interaction/style.css
+++ b/interaction/style.css
@@ -56,6 +56,12 @@
   pre {
     font-family: Courier, monospace;
   }
+  p{
+    text-align: left;
+    max-width: 66ch;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+  }
   body {
     background-color: black;
                color: white;
@@ -70,4 +76,24 @@
                padding: 5px;
                text-align: center;
    }
-  
+   .navbar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #222;
+    height: 50px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+  .navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    transition: 0.3s;
+  }
+  .navbar a:hover {
+    background-color: white;
+    color: black;
+  }
