--- a/perspective/index.css
+++ b/perspective/index.css
@@ -1,18 +1,41 @@
+.navbar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #222;
+    height: 50px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+  .navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    transition: 0.3s;
+  }
+  .navbar a:hover {
+    background-color: white;
+    color: black;
+  }
+
 .text {
     border: 0.5px solid black;
     padding: 2%;
     width: 360px;
     height: 360px;
-    text-align: justify;
+    text-align: center;
     max-width: 66ch;
   }
 body {
     height: 100%;
+    margin:10vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: bisque;
+    background-color: #f4f4f4;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 img{
@@ -36,3 +59,5 @@ main {
     align-items: center;
     padding: 5px;
 }
+
+
