--- a/physical-computing/style.css
+++ b/physical-computing/style.css
@@ -15,3 +15,25 @@ body {
                height: 100vh;
                margin: 50px;
    }
+
+   .navbar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #222;
+    height: 50px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+  .navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    transition: 0.3s;
+  }
+  .navbar a:hover {
+    background-color: white;
+    color: black;
+  }
