--- a/physical-computing/style.css
+++ b/physical-computing/style.css
@@ -13,7 +13,11 @@ body {
                align-items: center;
                justify-content: right;
                height: 100vh;
-               margin: 50px;
+               margin:20px;
+   }
+   p{
+    max-width: 66ch;
+    height: 66ch;
    }
 
    .navbar {
