updated img gallery

--- a/physical-computing/style.css
+++ b/physical-computing/style.css
@@ -1,24 +1,37 @@
 video {
-    height: 100vh;
-    width: 50vw;
+    height: 50vh;
+    max-width: 50vw;
+}
+.column{
+  display: flex;
+  flex-direction: column;
+
+}
+img{
+  display:flex;
+  max-width: 20vh;
+  height: auto;
+  padding: 10px;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: right;
+}
+body {
+  background-color: black;
+  color: white;
+  margin: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin:20px;
 }
 
-body {
-    background-color: black;
-               color: white;
-               margin: 0;
-               font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-               display: flex;
-               flex-direction: row;
-               align-items: center;
-               justify-content: right;
-               height: 100vh;
-               margin:20px;
-   }
-   p{
-    max-width: 66ch;
-    height: 66ch;
-   }
+
 
    .navbar {
     display: flex;
