--- a/analog-algorithm/style.css
+++ b/analog-algorithm/style.css
@@ -145,3 +145,12 @@ body {
 .info-title3{
     cursor: pointer;
 }
+footer{
+    position:relative;
+    margin: 3px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ }
