--- a/analog-algorithm/style.css
+++ b/analog-algorithm/style.css
@@ -1,21 +1,3 @@
-/* h3 { 
-    margin: 0;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            height: 10vh;}
- 
- 
-            * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration-color: aqua;
-/* } */
-
   .navbar {
     display: flex;
     justify-content: space-around;
@@ -38,23 +20,17 @@
     color: black;
   }
 
-
 p{
-    color:#2247b6;
-    text-align:left;
+    color:rgb(135, 135, 233);
+    text-align:center;
+
  }
 
  .card .p {
+    text-align: left;
     color: #000000;
  }
-.led-light-font{
-    display:flex;
-	align-items:center;
-	justify-content: center;
-	max-width: 50%;
-	height: auto;
-    padding:50px;
-}
+
 body {
    background-color: #000000;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -66,10 +42,10 @@ body {
 .flex{
     flex-wrap: wrap;
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    height: 70vh;
-    background-color: #f4f4f4;
+    background-color:  #000000;
+    padding-top: 20vh;
 }
 .container {
   display: flex;
@@ -79,7 +55,7 @@ body {
   align-items: baseline;
   flex-wrap: wrap;
   align-content: center;
-  background-color: #f4f4f4;
+  background-color: #000000;
 }
 .card {
     flex-wrap: wrap;
@@ -117,7 +93,7 @@ body {
 
 @media (max-width: 800px) {
     .container {
-        flex-direction: column; /* Stacks items vertically on small screens */
+        flex-direction: column;
         align-items: center;
     }
     .card {
