--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,4 +1,4 @@
-{
+*{
 margin: 0;
 padding: 0;
 border: 0;
@@ -7,11 +7,9 @@ font: inherit;
 vertical-align: baseline;
 box-sizing: border-box;
 }
-/* Optional: Additional resets for specific elements */
 body, figure {
 margin: 0;
 }
-/* Remove list styling */
 ul, ol {
 list-style: none;
 }
