--- a/interaction/style.css
+++ b/interaction/style.css
@@ -52,8 +52,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 65vw;
+    height: 50vh;
   }
   pre {
+    
     font-family: Courier, monospace;
   }
   p{
@@ -66,7 +69,7 @@
     background-color: black;
                color: white;
                margin: 5px;
-               font-family: Courier, monospace;
+               font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                display: flex;
                flex-direction: column;
                align-items: center;
@@ -96,4 +99,9 @@
   .navbar a:hover {
     background-color: white;
     color: black;
+  }
+  .textBox{
+    padding-top: 50vh;
+    color: white;
+    
   }
