--- a/interaction/style.css
+++ b/interaction/style.css
@@ -57,7 +57,7 @@
   }
   pre {
     
-    font-family: Courier, monospace;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
   p{
     text-align: left;
@@ -103,5 +103,4 @@
   .textBox{
     padding-top: 50vh;
     color: white;
-    
   }
